[gd_scene load_steps=6 format=3 uid="uid://cjdtt06tjoikv"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1"]
[ext_resource type="Script" path="res://scripts/grid_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/pathfinding_manager.gd" id="3"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1")

[node name="GridManager" type="Node2D" parent="."]
script = ExtResource("2")

[node name="PathfindingManager" type="Node" parent="."]
script = ExtResource("3")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = false
autostart = false

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true
position_smoothing_enabled = false
